--- a/www/login.html
+++ b/www/login.html
@@ -135,7 +135,8 @@
     .login_form {
         box-sizing: border-box;
         display: inline-block;
-        float: inline-start;
+        /*float: inline-start;+*/
+        float: left;
         margin-left: 20px;
         margin-top: 20px;
     }
@@ -244,6 +245,10 @@
             </div>
             <br /><br />
             <p>Cargando...</p>
+            <br>
+        </div>
+        <div style="text-align: center; margin-top: 50%">
+            <p>Recargue la pagina si este mensaje no desaparece en 5 segundos.</p>
         </div>
     </div>
     <div class="container_login">
