--- a/www/adminRoot.html
+++ b/www/adminRoot.html
@@ -19,6 +19,7 @@
     <script src="/javascripts/DataTables/datatables.js" type="text/javascript"></script>
     <script src="/javascripts/jquerySimpleFilePreview/jquery.simpleFilePreview.js" type="text/javascript"></script>
     <script src="/javascripts/snackbar.js" type="text/javascript"></script>
+    <script src="/javascripts/global.js" type="text/javascript"></script>
     <script src="/javascripts/jquery-confirm/jquery-confirm.min.js"></script>
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.3.1/css/all.css">
     <link rel="stylesheet" href="//cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
@@ -37,8 +38,11 @@
                 <div class="dot dot-a"></div>
                 <div class="dot dot-b"></div>
             </div>
-            <br/><br/>
+            <br /><br />
             <p>Cargando...</p>
+        </div>
+        <div style="text-align: center; margin-top: 50%">
+            <p>Recargue la pagina si este mensaje no desaparece en 5 segundos.</p>
         </div>
     </div>
     <nav class="navbar navbar-inverse top-bar navbar-fixed-top">
@@ -51,7 +55,7 @@
                     <span class="icon-bar"></span>
                 </button> <span class="menu-icon" id="menu-icon" style="line-height: 30px; width: 50px"><i
                         class="fa fa-bars" aria-hidden="true" id="chang-menu-icon"></i></span>
-                <a class="navbar-brand mx-auto mx-auto-top" href="#"
+                <a class="navbar-brand mx-auto mx-auto-top" href="http://localhost:3000"
                     style="text-shadow: 0 0 5px black, 0 0 10px rgba(0,0,0,.3);color: white; font-size: 30px; vertical-align: middle; line-height: 30px">DOC<span
                         style="text-shadow: 0 0 3.5px black; color: #3399ff">SYS</span></a>
             </div>
@@ -60,13 +64,13 @@
                     <li class=""><a href="#"><i class="fa fa-refresh"></i> Empezar Tour</a> </li>
                     <li class=""><a href="#"><i class="fa fa-bell"></i> <span class="badge">9</span></a> </li>
                     <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" data-target="#dropOpt"
-                            href="#">Opciones
+                            href="">Opciones
                         </a>
                     </li>
                     <ul class="dropdown-menu" style="position: absolute" id='dropOpt'>
                         <li> <a href="#"><i class="fa fa-user"></i> Perfil</a> </li>
                         <li> <a href="#"><i class="fa fa-cog"></i> Preferencias</a> </li>
-                        <li> <a href="#"><i class="fa fa-power-off"></i> Salir</a> </li>
+                        <li> <a href="javascript:logout()"><i class="fa fa-power-off"></i> Salir</a> </li>
                     </ul>
                 </ul>
             </div>
@@ -83,8 +87,7 @@
                                 class="fa fa-home"></i> Inicio
                             <i class="fa fa-chevron-left pull-right" id="arow1"></i> </a>
                         <ul class="collapse nav" id="Dashboard">
-                            <li> <a href="" id="history"><i class="fa fa-angle-double-right"></i> Usuarios</a> </li>
-                            <li> <a href="" id="bills"><i class="fa fa-angle-double-right"></i> Archivos</a> </li>
+                            <li> <a href="javascript:goToUsr()" id="history"><i class="fa fa-angle-double-right"></i> Usuarios</a> </li>
                         </ul>
                     </li>
                     <li class="panel">
@@ -197,6 +200,5 @@
             </div>
         </div>
         <script src="/javascripts/adminRoot.js" type="text/javascript"></script>
-        <script src="/javascripts/indexUsr.js" type="text/javascript"></script>
 
 </html>
