--- a/www/adminUser.html
+++ b/www/adminUser.html
@@ -17,12 +17,30 @@
     <script src="/javascripts/DataTables/datatables.js" type="text/javascript"></script>
     <script src="/javascripts/jquerySimpleFilePreview/jquery.simpleFilePreview.js" type="text/javascript"></script>
     <script src="/javascripts/snackbar.js" type="text/javascript"></script>
+    <script src="/javascripts/global.js" type="text/javascript"></script>
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.3.1/css/all.css">
     <link rel="stylesheet" href="//cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" href="//cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css">
 </head>
 
 <body>
+    <div class="loader-wraper">
+        <div class="loader">
+            <div class="duo duo1">
+                <div class="dot dot-a"></div>
+                <div class="dot dot-b"></div>
+            </div>
+            <div class="duo duo2">
+                <div class="dot dot-a"></div>
+                <div class="dot dot-b"></div>
+            </div>
+            <br /><br />
+            <p>Cargando...</p>
+        </div>
+        <div style="text-align: center; margin-top: 50%">
+            <p>Recargue la pagina si este mensaje no desaparece en 5 segundos.</p>
+        </div>
+    </div>
     <nav class="navbar navbar-inverse top-bar navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -33,7 +51,7 @@
                     <span class="icon-bar"></span>
                 </button> <span class="menu-icon" id="menu-icon" style="line-height: 30px; width: 50px"><i
                         class="fa fa-bars" aria-hidden="true" id="chang-menu-icon"></i></span>
-                <a class="navbar-brand mx-auto mx-auto-top" href="#"
+                <a class="navbar-brand mx-auto mx-auto-top" href="http://localhost:3000"
                     style="text-shadow: 0 0 5px black, 0 0 10px rgba(0,0,0,.3);color: white; font-size: 30px; vertical-align: middle; line-height: 30px">DOC<span
                         style="text-shadow: 0 0 3.5px black; color: #3399ff">SYS</span></a>
             </div>
@@ -48,7 +66,7 @@
                     <ul class="dropdown-menu" style="position: absolute" id='dropOpt'>
                         <li> <a href="#"><i class="fa fa-user"></i> Perfil</a> </li>
                         <li> <a href="#"><i class="fa fa-cog"></i> Preferencias</a> </li>
-                        <li> <a href="#"><i class="fa fa-power-off"></i> Salir</a> </li>
+                        <li> <a href="javascript:logout()"><i class="fa fa-power-off"></i> Salir</a> </li>
                     </ul>
                 </ul>
             </div>
@@ -60,20 +78,7 @@
             <!-- begin SIDE NAV USER PANEL -->
             <div class="hide-sidebar" id="show-nav">
                 <ul id="side" class="side-nav">
-                    <li class="panel">
-                        <a id="panel1" href="javascript:;" data-toggle="collapse" data-target="#Dashboard"> <i
-                                class="fa fa-home"></i> Inicio
-                            <i class="fa fa-chevron-left pull-right" id="arow1"></i> </a>
-                        <ul class="collapse nav" id="Dashboard">
-                            <li> <a href="" id="history"><i class="fa fa-angle-double-right"></i> Usuarios</a> </li>
-                            <li> <a href="" id="bills"><i class="fa fa-angle-double-right"></i> Archivos</a> </li>
-                        </ul>
-                    </li>
-                    <li class="panel">
-                        <a id="panel9" href="javascript:;" data-toggle="collapse" data-target="#trash"> <i
-                                class="fa fa-trash"></i> Papelera de reciclaje
-                        </a>
-                    </li>
+
                 </ul>
             </div>
             <!-- END SIDE NAV USER PANEL -->
@@ -99,6 +104,11 @@
                 </div>
             </div>
         </div>
+        <style>
+            #tableReview tbody tr td:last-child {
+                text-align: center;
+            }
+        </style>
         <div class="container-fluid">
             <table id='tableReview' class='table table-striped nowrap'
                 style="width:100%; background-color: white; border: 1px solid #ddd; text-align: left; outline: 2px solid rgb(197, 197, 197);">
@@ -107,8 +117,11 @@
                         <td style="width:50%">
                             <p>Correo</p>
                         </td>
-                        <td style="min-width: 30px">
+                        <td style="width: 40%">
                             <p style="text-align: left">Nombre</p>
+                        </td>
+                        <td style="min-width:220px">
+                            <p>Acciones</p>
                         </td>
                     </tr>
                 </thead>
@@ -116,7 +129,7 @@
                 </tbody>
                 <tfoot style="background-color: #f4faff">
                     <tr style="text-align:center">
-                        <td colspan="2" style="padding: 5px;" class='tdfooter'><u style="cursor: pointer;"
+                        <td colspan="3" style="padding: 5px;" class='tdfooter'><u style="cursor: pointer;"
                                 id="createFolder"><span
                                     style="display: inline; margin-right: 6px; vertical-align: text-bottom;"><img
                                         src=" /images/116-user-plus.svg"></img></span><strong>Nuevo Usuario</strong></u>
@@ -187,10 +200,29 @@
                     if (e.clientY > 64)
                         deltaY = 9
                     $('#menuCapa').css({ 'left': e.clientX - deltaX, 'top': e.clientY - deltaY })
+                    $(e.target).closest("tr")[0].getAttribute('data-passr')=='true'?$('#reset').addClass('anch-dis'):$('#reset').removeClass('anch-dis')
                     $('#menuCapa').show()
-                    currentRow = e.currentTarget
+                    currentRow = $(e.target).closest("tr")
                     currentElement = e.target
                 }
+            }
+            const resetUser = e => {
+                console.log(e[0])
+                fetch('/api/user/reset', {
+                    method: 'PUT',
+                    body: JSON.stringify({
+                        id: e[0].id
+                    }),
+                    headers: {
+                        'Accept': 'application/json',
+                        'Content-Type': 'application/json'
+                    }
+                }).then(res=>{
+                    if(res.status==200){
+                        e[0].setAttribute('data-passr', true)
+                        e[0].lastChild.innerHTML = `<button style='margin-left:5px' class='btn btn-danger btn-xs' onclick='' disabled=true>Resetear contraseña</button>`
+                    }
+                }).catch(console.log)
             }
 
 
@@ -209,36 +241,6 @@
                 $('#modalRow2').modal()
             }
 
-            const sendData = (first = true) => {
-                if (first) {
-                    window.conflicts = $files.filter(e => tree[current].some(ac => ac[0].split('&nbsp')[1].split("<")[1].split(">")[1] == e.name))
-                    solveConflicts()
-                }
-                else if (conflicts.length) {
-                    askModal()
-                } else {
-                    let dateCreation = ''
-                    let today = new Date()
-                    let row = []
-                    let imgExt = undefined;
-                    //console.log("archivos a mandar")
-                    //console.log($files.filter(e=>!rejectedConflicts.some(r=>r==e)))
-                    $files.filter(e => !rejectedConflicts.some(r => r == e)).forEach(f => {
-                        today = new Date(f.lastModified)
-                        dateCreation = today.getDate() + ' de ' + monthNames[today.getMonth()] + ', ' + today.getFullYear()
-                        imgExt = setImage(f.name.split('.').pop())
-                        if (imgExt) {
-                            row = ['<span style="display: inline; margin-right: 6px; vertical-align: text-bottom;"><img src="/images/' + imgExt + '" style="display: inline-block"></img>&nbsp<p style="display: inline-block;word-wrap: break-word; word-break: break-all; white-space: normal">' + f.name + '</p></span>', f.name.split('.').pop(), returnFileSize(f.size), dateCreation, "<span class='fa fa-window-close' style='margin-left:calc(50% - 20px); color: #FF5722' onclick='deleteRow($(this))'></span>"]
-                            if (!tree[current].some(e => e[0] == row[0])) {
-                                t.row.add(row).draw(false);
-                                tree[current].push(row)
-                                updateTableListener()
-                            }
-                        }
-                    })
-                }
-
-            }
             const validateInstertOrg = () => {
                 flag = true
                 error = []
@@ -278,32 +280,35 @@
                 }
             }
 
+            const getUserType = type => {
+                switch (type) {
+                    case 1:
+                        return 'Administrador:'
+                    case 2:
+                        return 'Sub-administrador:'
+                    case 4:
+                        return 'Administrador de organización:'
+                    case 5:
+                        return 'Sub-administrador de organización:'
+                    default:
+                        return 'Intruso:'
+                }
+            }
+
             var clicks = 0
-            const updateTableListener = () =>
-                $('#tableReview tbody tr td').unbind('click').on('click', e => {
-                    clicks++;
-                    let x = $(e.target).parent().children().toArray()
-                    console.log(x)
-                    console.log((x[1].innerHTML + "").toLowerCase())
-                    if (clicks >= 2 && (x[1].innerHTML + "").toLowerCase() == 'carpeta') {
-                        clearTimeout()
-                        current++
-                        tree[current] = []
-                        $('.breadcrumb li').removeClass("active");
-                        $($('.breadcrumb').toArray()[0]).append($("<li class='active' onclick=rollback(" + current + ",$(this))/>").append($(e.target).parent().children().first()[0].firstChild.innerText))
-                        t.clear().draw()
-                    }
-                    setTimeout(() => { clicks = 0 }, 500)
-                    if ((x[1].innerHTML + "").toLowerCase() != 'carpeta') {
-                        insertDataDM($(e.target).parent().children().toArray().map(e => $(e)))
-                    }
-                }).contextmenu(showMenu)
+            const updateTableListener = () => $('#tableReview tbody tr td').contextmenu(showMenu)
             const getTableData = info => {
                 colNames = ['Nombre', 'Tipo', 'Tamaño', 'Última modificación']
                 data = info.reduce((z, e, i) => z + '<tr><td>' + colNames[i] + ':' + '</td><td>' + (i == 0 ? e.children().last()[0].innerHTML : e.html()) + '</td></tr>', "")
                 return $("<div class='container' style='max-width: 90%'/>").append($('<table class="table table-bordered" style="max-width: 100%"/>').append(data)[0])
             }
             $('document').ready(() => {
+                fetch('/admUsrNav', {
+                    method: 'GET'
+                }).then(async e => {
+                    nav = await e.text()
+                    $("#side-nav").html(nav)
+                });
                 [$('#nombreO'), $('#correo'), $('#nombre')].forEach(e => e.hover(r => $(r.target).removeClass('error')))
                 var menu = $('#menuCapa')
                 menu.mouseleave(function () { menu.hide() })
@@ -312,6 +317,9 @@
                         header: true,
                         footer: true
                     },
+                    columnDefs: [
+                        { "orderable": false, "targets": 2 }
+                    ],
                     language: {
                         "sProcessing": "Procesando...",
                         "sLengthMenu": "Mostrar _MENU_ registros",
@@ -335,8 +343,31 @@
                             "sSortAscending": ": Activar para ordenar la columna de manera ascendente",
                             "sSortDescending": ": Activar para ordenar la columna de manera descendente"
                         }
+                    },
+                    'ajax': {
+                        url: `/api/user`,
+                        method: 'get',
+                        dataSrc: data => {
+                            return data.map(e => {
+                                return [e.email,
+                                e.name,
+                                e.passr ? `<button style='margin-left:5px' class='btn btn-danger btn-xs' onclick='' disabled=true>Resetear contraseña</button>` : `<button style='margin-left:5px' class='btn btn-danger btn-xs' onclick='resetUser($(this).closest("tr"))'>Resetear contraseña</button>`,
+                                e._id, e.passr]
+                            })
+                        }
+                    },
+                    "pageLength": 50,
+                    "fnCreatedRow": function (nRow, aData, iDataIndex) {
+                        $(nRow).attr('id', aData[3]);
+                        $(nRow)[0].setAttribute('data-passr', aData[4]);
+                    },
+                    'initComplete': () => {
+                        $('.loader-wraper').fadeOut()
+                        //updateHistory('root')
+                        updateTableListener()
                     }
                 });
+                $('#reset').click(() => !$('#reset').hasClass('anch-dis')&&resetUser(currentRow))
                 $('#override').click(e => {
                     solveConflicts(false)
                     if (!conflicts.length)
@@ -366,12 +397,11 @@
                 $('#saveC').click(() => {
                     var tableVec = t.data().toArray()
                     var msg = editing ? ['los datos no pueden permanecer iguales!', 'se ha modificado el usuario.']
-                                      : ['Hay un correo con conflicto!', 'se ha creado el usuario.']
-                    if(validateInstertOrg()){
-                        if(!tableVec.length||
-                            tableVec.every(e=>e[0] != $('#correo').val().toLowerCase() && e[1] != $("#nombre").val().toUpperCase())||
-                           (tableVec.some(e=>e[0] == $('#correo').val().toLowerCase() && e[1] != $("#nombre").val().toUpperCase()))&&editing) 
-                        {
+                        : ['Hay un correo con conflicto!', 'se ha creado el usuario.']
+                    if (validateInstertOrg()) {
+                        if (!tableVec.length ||
+                            tableVec.every(e => e[0] != $('#correo').val().toLowerCase() && e[1] != $("#nombre").val().toUpperCase()) ||
+                            (tableVec.some(e => e[0] == $('#correo').val().toLowerCase() && e[1] != $("#nombre").val().toUpperCase())) && editing) {
                             if (editing) {
                                 t.row($(currentRow.closest('tr'))).remove().draw(false)
                                 editing = false
@@ -382,12 +412,12 @@
                             hotsnackbar('hsdone', msg[1])
                         }
                         else {
-                            if(editing)
+                            if (editing)
                                 $("#nombre").addClass('error')
                             $('#correo').addClass('error')
                             hotsnackbar('hserror', msg[0])
                         }
-                    }    
+                    }
                 })
                 $('#edit').click(e => {
                     editing = true;
