--- a/www/creaUsuario.html
+++ b/www/creaUsuario.html
@@ -21,6 +21,7 @@
     <link href="/stylesheets/style.css" rel="stylesheet" type="text/css" />
     <script src="/javascripts/indexUsr.js" type="text/javascript"></script>
     <script src="/javascripts/modernizr-custom.js" type="text/javascript"></script>
+    <script src="/javascripts/global.js" type="text/javascript"></script>
     <script src="/javascripts/DataTables/datatables.js" type="text/javascript"></script>
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.3.1/css/all.css">
     <link rel="stylesheet" href="//cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
@@ -38,7 +39,7 @@
                     <span class="icon-bar"></span>
                 </button> <span class="menu-icon" id="menu-icon" style="line-height: 30px; width: 50px"><i
                         class="fa fa-bars" aria-hidden="true" id="chang-menu-icon"></i></span>
-                <a class="navbar-brand mx-auto mx-auto-top" href="#"
+                <a class="navbar-brand mx-auto mx-auto-top" href="http://localhost:3000"
                     style="text-shadow: 0 0 5px black, 0 0 10px rgba(0,0,0,.3);color: white; font-size: 30px; vertical-align: middle; line-height: 30px">DOC<span
                         style="text-shadow: 0 0 3.5px black; color: #3399ff">SYS</span></a>
             </div>
@@ -55,7 +56,7 @@
                     <ul class="dropdown-menu" style="position: absolute" id='dropOpt'>
                         <li> <a href="#"><i class="fa fa-user"></i> Perfil</a> </li>
                         <li> <a href="#"><i class="fa fa-cog"></i> Preferencias</a> </li>
-                        <li> <a href="#"><i class="fa fa-power-off"></i> Salir</a> </li>
+                        <li> <a href="javascript:logout()"><i class="fa fa-power-off"></i> Salir</a> </li>
                     </ul>
                 </ul>
             </div>
