--- a/www/fileManagement.html
+++ b/www/fileManagement.html
@@ -19,6 +19,7 @@
     <script src="/javascripts/DataTables/datatables.js" type="text/javascript"></script>
     <script src="/javascripts/jquerySimpleFilePreview/jquery.simpleFilePreview.js" type="text/javascript"></script>
     <script src="/javascripts/snackbar.js" type="text/javascript"></script>
+    <script src="/javascripts/global.js" type="text/javascript"></script>
     <script src="/javascripts/jquery-confirm/jquery-confirm.min.js"></script>
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.3.1/css/all.css">
     <link rel="stylesheet" href="//cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
@@ -40,6 +41,9 @@
             <br /><br />
             <p>Cargando...</p>
         </div>
+        <div style="text-align: center; margin-top: 50%">
+            <p>Recargue la pagina si este mensaje no desaparece en 5 segundos.</p>
+        </div>
     </div>
     <nav class="navbar navbar-inverse top-bar navbar-fixed-top">
         <div class="container-fluid">
@@ -51,7 +55,7 @@
                     <span class="icon-bar"></span>
                 </button> <span class="menu-icon" id="menu-icon" style="line-height: 30px; width: 50px"><i
                         class="fa fa-bars" aria-hidden="true" id="chang-menu-icon"></i></span>
-                <a class="navbar-brand mx-auto mx-auto-top" href="#"
+                <a class="navbar-brand mx-auto mx-auto-top" href="http://localhost:3000"
                     style="text-shadow: 0 0 5px black, 0 0 10px rgba(0,0,0,.3);color: white; font-size: 30px; vertical-align: middle; line-height: 30px">DOC<span
                         style="text-shadow: 0 0 3.5px black; color: #3399ff">SYS</span></a>
             </div>
@@ -66,7 +70,7 @@
                     <ul class="dropdown-menu" style="position: absolute" id='dropOpt'>
                         <li> <a href="#"><i class="fa fa-user"></i> Perfil</a> </li>
                         <li> <a href="#"><i class="fa fa-cog"></i> Preferencias</a> </li>
-                        <li> <a href="#"><i class="fa fa-power-off"></i> Salir</a> </li>
+                        <li> <a href="javascript:logout()"><i class="fa fa-power-off"></i> Salir</a> </li>
                     </ul>
                 </ul>
             </div>
@@ -83,12 +87,12 @@
                                 class="fa fa-home"></i> Inicio
                             <i class="fa fa-chevron-left pull-right" id="arow1"></i> </a>
                         <ul class="collapse nav" id="Dashboard">
-                            <li> <a href="" id="history"><i class="fa fa-angle-double-right"></i> Usuarios</a> </li>
-                            <li> <a href="" id="bills"><i class="fa fa-angle-double-right"></i> Archivos</a> </li>
+                            <li> <a href="javascript:goToUsr()" id="history"><i class="fa fa-angle-double-right"></i> Usuarios</a> </li>
+                            <li> <a href="javascript:goToStart()" id="bills"><i class="fa fa-angle-double-right"></i> Organizaciones</a> </li>
                         </ul>
                     </li>
                     <li class="panel">
-                        <a id="panel9" href="javascript:;" data-toggle="collapse" data-target="#trash"> <i
+                        <a id="panel9" href="javascript:goToDump()" data-toggle="collapse" data-target="#trash"> <i
                                 class="fa fa-trash"></i> Papelera de reciclaje
                         </a>
                     </li>
@@ -103,7 +107,7 @@
                 <div class="col-md-12" id='navigation'>
                     <ol class="breadcrumb">
                         <li><i class="fa fa-home"></i><a href=""> Inicio </a></li>
-                        <li><a href="">Mesa de trabajo</a></li>
+                        <li><a href=""class='orgName'>Mesa de trabajo</a></li>
                         <li class="active" onclick="rollback(0, $(this))"><a href="">Raíz</a></li>
                     </ol>
                 </div>
@@ -112,8 +116,8 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="main-header">
-                        <h2>Mesa de trabajo</h2>
-                        <em>Administrador</em>
+                        <h2class='orgName'>Mesa de trabajo</h2>
+                        <em id='usrName'>Administrador</em>
                     </div>
                 </div>
             </div>
@@ -561,7 +565,16 @@
             }
         }
         updateTableListener = () => $("#tableReview tbody tr td").contextmenu(e => e.preventDefault())
-
+        const getUserType = type => {
+            switch (type) {
+                case 1:
+                    return 'Administrador:'
+                case 2:
+                    return 'Sub-administrador:'
+                default:
+                    return 'Invitado:'
+            }
+        }
         var clicks = 0
         const updateTableListenerd = () =>
             $('#tableReview tbody').on('click', e => {// tbody tr td
@@ -598,7 +611,7 @@
                     formSubmit: {
                         text: 'Descargar',
                         btnClass: 'btn-blue',
-                        action: function () {}
+                        action: function () { }
                     },
                     cancelar: function () {
                         //close
@@ -720,7 +733,7 @@
                             text: 'Guardar',
                             btnClass: 'btn-blue',
                             action: function (e) {
-                                this.$content.find('.name').focus(e=>$(e.target).removeClass('error'))
+                                this.$content.find('.name').focus(e => $(e.target).removeClass('error'))
                                 if (this.$content.find('.name').val().length == 0) {
                                     this.$content.find('.name').addClass('error')
                                     hotsnackbar('hserror', 'el nombre no puede ser vacío!')
