--- a/www/indexUsr.html
+++ b/www/indexUsr.html
@@ -50,7 +50,7 @@
             <br /><br />
             <p>Cargando...</p>
         </div>
-        <div style="text-align: center; margin-top: 50%">
+        <div style="text-align: center; margin-top: calc(100vh - 80px);">
             <p>Recargue la pagina si este mensaje no desaparece en 5 segundos.</p>
         </div>
     </div>
