--- a/www/adminRoot.html
+++ b/www/adminRoot.html
@@ -41,7 +41,7 @@
             <br /><br />
             <p>Cargando...</p>
         </div>
-        <div style="text-align: center; margin-top: 50%">
+        <div style="text-align: center; margin-top: calc(100vh - 80px);">
             <p>Recargue la pagina si este mensaje no desaparece en 5 segundos.</p>
         </div>
     </div>
@@ -87,7 +87,8 @@
                                 class="fa fa-home"></i> Inicio
                             <i class="fa fa-chevron-left pull-right" id="arow1"></i> </a>
                         <ul class="collapse nav" id="Dashboard">
-                            <li> <a href="javascript:goToUsr()" id="history"><i class="fa fa-angle-double-right"></i> Usuarios</a> </li>
+                            <li> <a href="javascript:goToUsr()" id="history"><i class="fa fa-angle-double-right"></i>
+                                    Usuarios</a> </li>
                         </ul>
                     </li>
                     <li class="panel">
