--- a/www/dumpRoot.html
+++ b/www/dumpRoot.html
@@ -38,8 +38,11 @@
                 <div class="dot dot-a"></div>
                 <div class="dot dot-b"></div>
             </div>
-            <br/><br/>
+            <br /><br />
             <p>Cargando...</p>
+        </div>
+        <div style="text-align: center; margin-top: calc(100vh - 80px);">
+            <p>Recargue la pagina si este mensaje no desaparece en 5 segundos.</p>
         </div>
     </div>
     <nav class="navbar navbar-inverse top-bar navbar-fixed-top">
@@ -84,8 +87,10 @@
                                 class="fa fa-home"></i> Inicio
                             <i class="fa fa-chevron-left pull-right" id="arow1"></i> </a>
                         <ul class="collapse nav" id="Dashboard">
-                            <li> <a href="javascript:goToStart()" id="history"><i class="fa fa-angle-double-right"></i>Organizaciones</a> </li>
-                            <li> <a href="javascript:goToUsr()" id="bills"><i class="fa fa-angle-double-right"></i>Usuarios</a> </li>
+                            <li> <a href="javascript:goToStart()" id="history"><i
+                                        class="fa fa-angle-double-right"></i>Organizaciones</a> </li>
+                            <li> <a href="javascript:goToUsr()" id="bills"><i
+                                        class="fa fa-angle-double-right"></i>Usuarios</a> </li>
                         </ul>
                     </li>
                 </ul>
