--- a/www/adminUser.html
+++ b/www/adminUser.html
@@ -325,7 +325,7 @@
                     method: 'GET'
                 }).then(async e => {
                     nav = await e.text()
-                    $("#side-nav").html(nav)
+                    $("#side").html(nav)
                 });
                 [$('#nombreO'), $('#correo'), $('#nombre')].forEach(e => e.hover(r => $(r.target).removeClass('error')))
                 var menu = $('#menuCapa')
@@ -517,6 +517,5 @@
             }
 
         </script>
-        <script src="/javascripts/indexUsr.js" type="text/javascript"></script>
 
 </html>
