--- a/www/dump.html
+++ b/www/dump.html
@@ -56,8 +56,8 @@
                 </button> <span class="menu-icon" id="menu-icon" style="line-height: 30px; width: 50px"><i
                         class="fa fa-bars" aria-hidden="true" id="chang-menu-icon"></i></span>
                 <a class="navbar-brand mx-auto mx-auto-top" href="http://localhost:3000"
-                    style="text-shadow: 0 0 5px black, 0 0 10px rgba(0,0,0,.3);color: white; font-size: 30px; vertical-align: middle; line-height: 30px">D<span
-                        style="text-shadow: 0 0 3.5px black; color: #3399ff">S</span></a>
+                    style="text-shadow: 0 0 5px black, 0 0 10px rgba(0,0,0,.3);color: white; font-size: 30px; vertical-align: middle; line-height: 30px">DOC<span
+                        style="text-shadow: 0 0 3.5px black; color: #3399ff">SYS</span></a>
             </div>
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
                 <ul class="nav navbar-nav">
@@ -586,6 +586,17 @@
         }
         updateTableListener = () => $("#tableReview tbody tr td").contextmenu(e => e.preventDefault())
 
+        const getUserType = type => {
+            switch (type) {
+                case 1:
+                    return 'Administrador:'
+                case 2:
+                    return 'Sub-administrador:'
+                default:
+                    return 'Invitado:'
+            }
+        }
+
         var clicks = 0
         const updateTableListenerd = () =>
             $('#tableReview tbody').on('click', e => {// tbody tr td
@@ -848,7 +859,7 @@
             }
         })
 
+
     </script>
-    <script src="/javascripts/indexUsr.js" type="text/javascript"></script>
 
 </html>
