--- a/www/adminUser.html
+++ b/www/adminUser.html
@@ -180,10 +180,11 @@
                 </div>
             </div>
         </div>
-        <div id="menuCapa" class="menuCapa">
+        <div id="menuCapa" class="menuCapa" style="height: 66px">
             <div style='width: 95%; margin: auto'>
-                <a class="visto marca" id="edit" href="#">Editar usuario</a>
-                <a class="visto marca" id="reset" href="#">Resetear contraseña</a>
+                <a class="visto marca" id="edit" href="javascript:editUser()">Editar usuario</a>
+                <a class="visto marca" id="reset" href="javascript:resetUserVal()">Resetear contraseña</a>
+                <a class="visto marca" id="reset" href="javascript:deleteUser()">Eliminar usuario</a>
             </div>
         </div>
         <script>
@@ -220,7 +221,6 @@
                 }
             }
             const resetUser = e => {
-                console.log(e[0])
                 fetch('/api/user/reset', {
                     method: 'PUT',
                     body: JSON.stringify({
@@ -242,7 +242,26 @@
                     }
                 }).catch(console.log)
             }
+            const resetUserVal = () => !$('#reset').hasClass('anch-dis') && resetUser(currentRow)
 
+            const deleteUser = () => {
+                fetch(`/api/user/${currentRow.closest('tr')[0].id}`, {
+                    method: 'DELETE',
+                    headers: {
+                        'Accept': 'application/json',
+                        'Content-Type': 'application/json'
+                    }
+                }).then(async res => {
+                    if (res.status == 200) {
+                        t.row(currentRow[0]).remove().draw(false)
+                        return
+                    }
+                    if (res.status == 403) {
+                        hotsnackbar('hserror', 'No tienes los permisos para realizar esta acción!')
+                    }
+                    throw res.message
+                }).catch(console.log)
+            }
 
             const solveConflicts = (first = true, type = true) => {
                 if (first)
@@ -313,6 +332,27 @@
                 }
             }
 
+            const editUser = () => {
+                editing = true;
+                $("#tipo").prop('disabled', false)
+                window.rowElements = $(currentRow).children().toArray().map(e => $(e))
+                $('#correo').val(rowElements[0].html()).removeClass('error')
+                $("#nombre").val(rowElements[1].html()).removeClass('error')
+                console.log(currentRow[0].getAttribute('data-type'))
+                switch (currentRow[0].getAttribute('data-type')) {
+                    case '2': case '5':
+                        $("#tipo").val('1')
+                        break
+                    case '3': case '4':
+                        $("#tipo").val('2')
+                        break
+                    default:
+                        $("#tipo").val('3').prop('disabled', true)
+                }
+                $("#modalTittle").html("Modificar Usuario")
+                $('#modalRow').modal()
+            }
+
             var clicks = 0
             const updateTableListener = () => $('#tableReview tbody tr td').contextmenu(showMenu)
             const getTableData = info => {
@@ -326,6 +366,9 @@
                 }).then(async e => {
                     nav = await e.text()
                     $("#side").html(nav)
+                    type = JSON.parse(localStorage.getItem('user')).type
+                    /*if(type==1||type==2)
+                        $('#tipo').html(`${$('#tipo').html()}<option value="4" active>Trabajador</option>`)*///preguntar a pablo
                 });
                 [$('#nombreO'), $('#correo'), $('#nombre')].forEach(e => e.hover(r => $(r.target).removeClass('error')))
                 var menu = $('#menuCapa')
@@ -387,7 +430,6 @@
                         updateTableListener()
                     }
                 });
-                $('#reset').click(() => !$('#reset').hasClass('anch-dis') && resetUser(currentRow))
                 $('#override').click(e => {
                     solveConflicts(false)
                     if (!conflicts.length)
@@ -409,7 +451,11 @@
 
                 $('#foldertd').css('display', 'table-cell !important')
                 $('#createFolder').click(e => {
+                    editing = false
                     e.preventDefault()
+                    $('#nombre').val('')
+                    $('#correo').val('')
+                    $('#tipo').val('2').prop('disabled', false)
                     $("#modalTittle").html("Crear Nuevo Usuario")
                     $('#modalRow').modal()
                 })
@@ -432,7 +478,7 @@
                                     body: JSON.stringify({
                                         name: $('#nombre').val(),
                                         email: $('#correo').val(),
-                                        type: $('#tipo').val()
+                                        type: $('#tipo').val() == 1
                                     })
                                 }).then(async res => {
                                     if (res.status == 200) {
@@ -481,27 +527,7 @@
                         }
                     }
                 })
-                $('#edit').click(e => {
-                    editing = true;
-                    e.preventDefault()
-                    window.rowElements = $(currentRow).children().toArray().map(e => $(e))
-                    $('#correo').val(rowElements[0].html()).removeClass('error')
-                    $("#nombre").val(rowElements[1].html()).removeClass('error')
-                    console.log(currentRow[0].getAttribute('data-type'))
-                    switch (currentRow[0].getAttribute('data-type')) {
-                        case '2': case '5':
-                            $("#tipo").val('1')
-                            break
-                        case '3': case '4':
-                            $("#tipo").val('2')
-                            break
-                        default:
-                            $("#tipo").val('3').prop('disabled', true)
-                    }
-                    $("#modalTittle").html("Modificar Usuario")
-                    $('#modalRow').modal()
 
-                })
             })
             const refreshTable = (newU, msg) => {
                 t.row.add([
