--- a/html/fileManagement.html
+++ b/html/fileManagement.html
@@ -111,7 +111,7 @@
             <div class="row">
                 <div class="col-md-12" id='navigation'>
                     <ol class="breadcrumb">
-                        <li><i class="fa fa-home"></i><a href=""> Inicio </a></li>
+                        <li><i class="fa fa-home"></i><a href="javascript:goToStart()"> Inicio </a></li>
                         <li><a href="" class='orgName'>Mesa de trabajo</a></li>
                         <li class="active" onclick="rollback(0, $(this))"><a href="">Raíz</a></li>
                     </ol>
@@ -121,7 +121,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="main-header">
-                        <h2class='orgName'>Mesa de trabajo</h2>
+                        <h2 class='orgName'>Mesa de trabajo</h2>
                             <em id='usrName'>Administrador</em>
                     </div>
                 </div>
