--- a/www/noPreviewSize.html
+++ b/www/noPreviewSize.html
@@ -2,11 +2,12 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!------ Include the above in your HEAD tag ---------->
 </head>
-<!------ Include the above in your HEAD tag ---------->
+
 <body>
     <div class="d-flex justify-content-center align-items-center" id="main">
-        <h2 class="font-weight-normal lead" id="desc">Vista previa no disponible.</h2>
+        <h2 class="font-weight-normal lead" id="desc">Vista previa no disponible, Archivo excede el limite de 3MB.</h2>
     </div>
     <style>
         #main {
