--- a/html/adminRoot.html
+++ b/html/adminRoot.html
@@ -63,7 +63,7 @@
                 <ul class="nav navbar-nav">
                     <li class=""><a href="#"><i class="fa fa-refresh"></i> Empezar Tour</a> </li>
                     <li class=""><a href="#"><i class="fa fa-bell"></i> <span class="badge">9</span></a> </li>
-                    <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" data-target="#dropOpt"
+                    <li id='options' class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" data-target="#dropOpt"
                             href="">Opciones
                         </a>
                     </li>
